// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#00425F",
        "fontFamily": "Source Sans Pro",
        "fontSize": 22,
        "fontWeight": "bold",
      }
    }
  />
</View>
`;

exports[`underlined h1 remains the same 1`] = `
<View>
  <Text
    style={
      Object {
        "color": "#00425F",
        "fontFamily": "Source Sans Pro",
        "fontSize": 22,
        "fontWeight": "bold",
      }
    }
  />
  <View
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#bcbbc1",
        "height": 0.5,
        "marginBottom": 20,
        "width": 100,
      }
    }
  />
</View>
`;
